syntax = "proto3";

package direktiv_flow;

option go_package = "github.com/direktiv/direktiv/pkg/flow/grpc";

import "google/protobuf/timestamp.proto";

import "pkg/flow/grpc/pagination.proto";

message Namespace {
	google.protobuf.Timestamp created_at = 1;
	google.protobuf.Timestamp updated_at = 2;
	string name = 3;
	map<string, string> notes = 5;
}

message LinterIssue {
	string type = 1;
	string id = 2;
	string issue = 3;
	string level = 4;
}

message NamespaceLintRequest {
	string name = 1;
}

message NamespaceLintResponse {
	Namespace namespace = 1;
	repeated LinterIssue issues = 4;
}